[package]

name = "roar"
version = "0.1.0"
authors = ["Pavel Karateev <lancelote.du.lac@gmail.com>"]
license = "Unlicense"
license-file = "UNLICENSE"
description = "A tool to send messages as macOS native notifications"
readme = "README.md"
homepage = "https://github.com/lancelote/roar"
repository = "https://github.com/lancelote/roar"
keywords = ["cli", "notification", "macos"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
notifica = "1.0.2"